SubBt/force-app/main/default/objects/Master_Budget__c/Master_Budget__c.object-meta.xml
<CustomObject>
    <label>Master Budget</label>
    <nameField>
        <label>Master Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>