SubBt/force-app/main/default/objects/Master_Budget__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <displayFormat>B-{00000}</displayFormat>
    <label>Budget #</label>
    <type>AutoNumber</type>
</CustomField>