SubBt/force-app/main/default/objects/Master_Budget__c/fields/Is_Budget_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Budget_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Budget Locked ?</label>
    <type>Checkbox</type>
</CustomField>