SubBt/force-app/main/default/objects/Master_Budget__c/fields/Original_Budget__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget__c</fullName>
    <label>Original Budget</label>
    <summarizedField>Master_Budget_Line__c.Original_Budget__c</summarizedField>
    <summaryForeignKey>Master_Budget_Line__c.Master_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>