SubBt/force-app/main/default/objects/Master_Budget__c/fields/Total_Budget_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Price__c</fullName>
    <label>Total Costs</label>
    <summarizedField>Master_Budget_Line__c.Unit_Price__c</summarizedField>
    <summaryForeignKey>Master_Budget_Line__c.Master_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>