SubBt/force-app/main/default/objects/Master_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Total_Budget_Price__c</columns>
    <columns>Is_Budget_Locked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>